--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
- 
   "dependencies": {
     "@clerk/nextjs": "^6.11.2",
     "@clerk/themes": "^2.2.17",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.3.1",
@@ -25,9 +25,9 @@
     "mongoose": "^8.10.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-quill-new": "^3.3.3",
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
