--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-quill-new": "^3.3.3",
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
